src/objects/ContentAssignment__c.object
<CustomObject>
    <description>Manages the direct assignment of Content to Components</description>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Content Assignment</relationshipLabel>
        <relationshipName>ComponentContentAssignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipName>ComponentContentAssignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>It&apos;s the numeric field to do a manual order.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Content Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Content Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateRecordTypeContentComponent</fullName>
        <active>false</active>
        <errorConditionFormula>Content__r.RecordType.DeveloperName != Component__r.RecordType.DeveloperName</errorConditionFormula>
        <errorMessage>Content record type doesn&apos;t match with the Component record type</errorMessage>
    </validationRules>
</CustomObject>